# docs/swagger.yaml
@@ -109,10 +109,6 @@ definitions:
         type: string
       code_package_type:
         type: string
-      domain:
-        type: string
-      domain_path:
-        type: string
       gpu_count:
         type: integer
       limits_memory:
@@ -173,10 +169,6 @@ definitions:
         type: string
       deleted_at:
         format: date-time
-        type: string
-      domain:
-        type: string
-      domain_path:
         type: string
       env:
         type: string
